--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = 'adventofcode'
 
 include 'common'
+include '2020:day1'
 include '2020:day7'
 include '2020:day8'
 include '2020:day9'
