--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,7 @@ rootProject.name = 'adventofcode'
 
 include 'common'
 include '2020:day1'
+include '2020:day2'
 include '2020:day7'
 include '2020:day8'
 include '2020:day9'
