--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,8 @@
 rootProject.name = 'adventofcode'
 
 include 'common'
+include '2015:day1'
+
 include '2020:day1'
 include '2020:day2'
 include '2020:day7'
