Advent of code 2020: * Day 20

--- a/2020/day20/build.gradle
+++ b/2020/day20/build.gradle
@@ -1,4 +1,5 @@
 dependencies {
+    compile project(':common')
     annotationProcessor 'org.projectlombok:lombok:1.18.16'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.16'
 }
