--- a/2020/day13/build.gradle
+++ b/2020/day13/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
-    compile project(':common')
+    implementation project(':common')
     annotationProcessor 'org.projectlombok:lombok:1.18.16'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.16'
 }
