--- a/settings.gradle
+++ b/settings.gradle
@@ -29,3 +29,8 @@ include '2020:day25'
 include '2021:day1'
 include '2021:day2'
 include '2021:day3'
+include '2021:day4'
+include '2021:day5'
+include '2021:day6'
+include '2021:day7'
+include '2021:day8'
