Advent of code 2021: * Day 10 * Day 11 * Day 12 * Day 13

--- a/settings.gradle
+++ b/settings.gradle
@@ -35,3 +35,7 @@ include '2021:day6'
 include '2021:day7'
 include '2021:day8'
 include '2021:day9'
+include '2021:day10'
+include '2021:day11'
+include '2021:day12'
+include '2021:day13'
