--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,8 +19,7 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
 
-    - name: Setup Gradle
+    - name: Setup Gradle & Build
       uses: gradle/gradle-build-action@v2
-    
-    - name: Execute Gradle build
-      run: gradle build
+      with:
+        arguments: build
