--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,4 +22,5 @@ jobs:
     - name: Setup Gradle & Build
       uses: gradle/gradle-build-action@v2
       with:
-        arguments: build
+        gradle-version: 7.3
+    - run: gradle build
