--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,10 +16,10 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-java@v2
       with:
-        java-version: '11'
-        distribution: 'temurin'
+        java-version: '8'
+        distribution: 'adopt'
 
-    - name: Setup Gradle & Build
+    - name: Setup Gradle
       uses: gradle/gradle-build-action@v2
       with:
         gradle-version: 7.3
