--- a/build.gradle
+++ b/build.gradle
@@ -7,12 +7,16 @@ allprojects {
     }
 
     dependencies {
-        implementation 'ch.qos.logback:logback-classic:1.2.3'
-        implementation 'org.apache.commons:commons-lang3:3.11'
-        compileOnly 'org.projectlombok:lombok:1.18.16'
+        implementation 'ch.qos.logback:logback-classic:1.3.5'
+        implementation 'org.apache.commons:commons-lang3:3.12.0'
+        implementation 'com.google.guava:guava:31.1-jre'
+        compileOnly 'org.projectlombok:lombok:1.18.24'
 
-        testImplementation group: 'junit', name: 'junit', version: '4.12'
-        testCompileOnly 'org.projectlombok:lombok:1.18.16'
+        annotationProcessor 'org.projectlombok:lombok:1.18.24'
+        testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
+
+        testImplementation group: 'junit', name: 'junit', version: '4.13.2'
+        testCompileOnly 'org.projectlombok:lombok:1.18.24'
     }
     
     wrapper {
