--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,28 @@
+plugins {
+    id "org.sonarqube" version "3.5.0.2730"
+}
+
 allprojects {
-
-    apply plugin: 'java'
-
     repositories {
         mavenCentral()
     }
+}
+
+sonarqube {
+    properties {
+        property "sonar.projectKey", "odoral_adventofcode"
+        property "sonar.organization", "odoral"
+        property "sonar.sourceEncoding", "UTF-8"
+        property "sonar.host.url", "https://sonarcloud.io"
+        property "sonar.java.source", "8"
+    }
+}
+
+subprojects {
+
+    apply plugin: 'java'
+    apply plugin: 'jacoco'
+    apply plugin: 'org.sonarqube'
 
     dependencies {
         implementation 'ch.qos.logback:logback-classic:1.3.5'
@@ -18,9 +36,23 @@ allprojects {
         testImplementation group: 'junit', name: 'junit', version: '4.13.2'
         testCompileOnly 'org.projectlombok:lombok:1.18.24'
     }
-    
+
+    sonarqube {
+        properties {
+            property "sonar.projectKey", "odoral_adventofcode"
+            property "sonar.organization", "odoral"
+            property "sonar.sourceEncoding", "UTF-8"
+            property "sonar.host.url", "https://sonarcloud.io"
+            property "sonar.java.source", "8"
+        }
+    }
+
     wrapper {
         gradleVersion = '7.3'
         distributionType = Wrapper.DistributionType.BIN
+    }
+
+    jacoco {
+        toolVersion = "0.8.0"
     }
 }
