--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -39,7 +39,7 @@ jobs:
         uses: gradle/gradle-build-action@v2
         with:
           gradle-version: 7.3
-          arguments: clean test --info --continue
+          arguments: clean codeCoverageReport --info --continue
 
       - name: Set up JDK 11
         uses: actions/setup-java@v2
@@ -51,7 +51,7 @@ jobs:
         uses: gradle/gradle-build-action@v2
         with:
           gradle-version: 7.3
-          arguments: clean sonarqube --info --continue
+          arguments: clean sonarqube -x test --info --continue
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
