--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,26 @@ allprojects {
     }
 }
 
-def allTestCoverageFile = "${rootProject.buildDir}/jacoco/allTestCoverage.exec"
-task jacocoMerge(type: JacocoMerge, group: 'verification') {
-    destinationFile = file(allTestCoverageFile)
-    executionData = project.fileTree(dir: '.', include:'**/build/jacoco/test.exec')
+task codeCoverageReport(type: JacocoReport) {
+
+    // Gather execution data from all subprojects
+    executionData fileTree(project.rootDir.absolutePath).include("**/build/jacoco/*.exec")
+
+    // Add all relevant source sets from the subprojects
+    subprojects.each {
+        sourceSets it.sourceSets.main
+    }
+
+    reports {
+        xml.enabled true
+        html.enabled true
+        csv.enabled false
+    }
+}
+
+// always run the tests before generating the report
+codeCoverageReport.dependsOn {
+    subprojects*.test
 }
 
 sonarqube {
@@ -23,7 +39,7 @@ sonarqube {
         property "sonar.sourceEncoding", "UTF-8"
         property "sonar.host.url", "https://sonarcloud.io"
         property "sonar.java.source", "8"
-        property 'sonar.jacoco.reportPaths', allTestCoverageFile
+        property "sonar.coverage.jacoco.xmlReportPaths", "${rootDir}/build/reports/jacoco/codeCoverageReport/codeCoverageReport.xml"
     }
 }
 
@@ -46,17 +62,6 @@ subprojects {
         testCompileOnly 'org.projectlombok:lombok:1.18.24'
     }
 
-    sonarqube {
-        properties {
-            property "sonar.projectKey", "odoral_adventofcode"
-            property "sonar.organization", "odoral"
-            property "sonar.sourceEncoding", "UTF-8"
-            property "sonar.host.url", "https://sonarcloud.io"
-            property "sonar.java.source", "8"
-            property 'sonar.jacoco.reportPaths', allTestCoverageFile
-        }
-    }
-
     wrapper {
         gradleVersion = '7.3'
         distributionType = Wrapper.DistributionType.BIN
@@ -65,7 +70,5 @@ subprojects {
     jacoco {
         toolVersion = "0.8.3"
     }
-
-    test.finalizedBy(jacocoMerge)
 
 }
