--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -38,8 +38,8 @@ jobs:
       - name: Check
         uses: gradle/gradle-build-action@v2
         with:
-          gradle-version: 7.3
-          arguments: clean codeCoverageReport --info --continue
+          gradle-version: 7.6
+          arguments: clean testCodeCoverageReport --info --continue
 
       - name: Set up JDK 11
         uses: actions/setup-java@v2
@@ -50,8 +50,8 @@ jobs:
       - name: Sonar
         uses: gradle/gradle-build-action@v2
         with:
-          gradle-version: 7.3
-          arguments: clean sonarqube -x test --info --continue
+          gradle-version: 7.6
+          arguments: clean sonarqube -x clean -x test --info --continue
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
