Advent of code 2022: * Day 6

--- a/code-coverage-report/build.gradle
+++ b/code-coverage-report/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     jacocoAggregation project(':2022:day3')
     jacocoAggregation project(':2022:day4')
     jacocoAggregation project(':2022:day5')
+    jacocoAggregation project(':2022:day6')
 }
 
 reporting {
