Advent of code 2022: * Day 7

--- a/settings.gradle
+++ b/settings.gradle
@@ -46,5 +46,6 @@ include '2022:day3'
 include '2022:day4'
 include '2022:day5'
 include '2022:day6'
+include '2022:day7'
 
 include 'code-coverage-report'
