--- a/code-coverage-report/build.gradle
+++ b/code-coverage-report/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     jacocoAggregation project(':2022:day4')
     jacocoAggregation project(':2022:day5')
     jacocoAggregation project(':2022:day6')
+    jacocoAggregation project(':2022:day7')
 }
 
 reporting {
