--- a/settings.gradle
+++ b/settings.gradle
@@ -47,5 +47,6 @@ include '2022:day4'
 include '2022:day5'
 include '2022:day6'
 include '2022:day7'
+include '2022:day8'
 
 include 'code-coverage-report'
