Advent of code 2022: * Day 10

--- a/code-coverage-report/build.gradle
+++ b/code-coverage-report/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     jacocoAggregation project(':2022:day7')
     jacocoAggregation project(':2022:day8')
     jacocoAggregation project(':2022:day9')
+    jacocoAggregation project(':2022:day10')
 }
 
 reporting {
