--- a/settings.gradle
+++ b/settings.gradle
@@ -49,5 +49,6 @@ include '2022:day6'
 include '2022:day7'
 include '2022:day8'
 include '2022:day9'
+include '2022:day10'
 
 include 'code-coverage-report'
