--- a/settings.gradle
+++ b/settings.gradle
@@ -50,5 +50,6 @@ include '2022:day7'
 include '2022:day8'
 include '2022:day9'
 include '2022:day10'
+include '2022:day11'
 
 include 'code-coverage-report'
