Advent of code 2022: * Day 12

--- a/code-coverage-report/build.gradle
+++ b/code-coverage-report/build.gradle
@@ -64,6 +64,7 @@ dependencies {
     jacocoAggregation project(':2022:day9')
     jacocoAggregation project(':2022:day10')
     jacocoAggregation project(':2022:day11')
+    jacocoAggregation project(':2022:day12')
 }
 
 reporting {
