--- a/settings.gradle
+++ b/settings.gradle
@@ -52,5 +52,6 @@ include '2022:day9'
 include '2022:day10'
 include '2022:day11'
 include '2022:day12'
+include '2022:day13'
 
 include 'code-coverage-report'
