Advent of code 2022: * Day 25

--- a/code-coverage-report/build.gradle
+++ b/code-coverage-report/build.gradle
@@ -68,6 +68,8 @@ dependencies {
     jacocoAggregation project(':2022:day13')
 
     jacocoAggregation project(':2022:day17')
+    
+    jacocoAggregation project(':2022:day25')
 }
 
 reporting {
