Advent of code 2022: * Day 14

--- a/code-coverage-report/build.gradle
+++ b/code-coverage-report/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     jacocoAggregation project(':2022:day11')
     jacocoAggregation project(':2022:day12')
     jacocoAggregation project(':2022:day13')
+    jacocoAggregation project(':2022:day14')
 
     jacocoAggregation project(':2022:day17')
 }
