Advent of code 2022: * Day 15

--- a/code-coverage-report/build.gradle
+++ b/code-coverage-report/build.gradle
@@ -67,7 +67,8 @@ dependencies {
     jacocoAggregation project(':2022:day12')
     jacocoAggregation project(':2022:day13')
     jacocoAggregation project(':2022:day14')
-
+    jacocoAggregation project(':2022:day15')
+    
     jacocoAggregation project(':2022:day17')
 }
 
