--- a/settings.gradle
+++ b/settings.gradle
@@ -54,6 +54,7 @@ include '2022:day11'
 include '2022:day12'
 include '2022:day13'
 include '2022:day14'
+include '2022:day15'
 
 include '2022:day17'
 
