--- a/code-coverage-report/build.gradle
+++ b/code-coverage-report/build.gradle
@@ -70,6 +70,7 @@ dependencies {
     jacocoAggregation project(':2022:day15')
     
     jacocoAggregation project(':2022:day17')
+    jacocoAggregation project(':2022:day18')
 }
 
 reporting {
