Advent of code 2022: * Day 21

--- a/code-coverage-report/build.gradle
+++ b/code-coverage-report/build.gradle
@@ -73,6 +73,7 @@ dependencies {
     jacocoAggregation project(':2022:day18')
     
     jacocoAggregation project(':2022:day20')
+    jacocoAggregation project(':2022:day21')
 }
 
 reporting {
