--- a/code-coverage-report/build.gradle
+++ b/code-coverage-report/build.gradle
@@ -71,6 +71,7 @@ dependencies {
 
     // 2023
     jacocoAggregation project(':2023:day1')
+    jacocoAggregation project(':2023:day2')
 }
 
 reporting {
