--- a/code-coverage-report/build.gradle
+++ b/code-coverage-report/build.gradle
@@ -74,6 +74,7 @@ dependencies {
     jacocoAggregation project(':2023:day2')
     jacocoAggregation project(':2023:day3')
     jacocoAggregation project(':2023:day4')
+    jacocoAggregation project(':2023:day5')
 }
 
 reporting {
