--- a/settings.gradle
+++ b/settings.gradle
@@ -61,5 +61,6 @@ include '2023:day2'
 include '2023:day3'
 include '2023:day4'
 include '2023:day5'
+include '2023:day6'
 
 include 'code-coverage-report'
