--- a/code-coverage-report/build.gradle
+++ b/code-coverage-report/build.gradle
@@ -76,6 +76,7 @@ dependencies {
     jacocoAggregation project(':2023:day4')
     jacocoAggregation project(':2023:day5')
     jacocoAggregation project(':2023:day6')
+    jacocoAggregation project(':2023:day7')
 }
 
 reporting {
