--- a/settings.gradle
+++ b/settings.gradle
@@ -63,5 +63,6 @@ include '2023:day4'
 include '2023:day5'
 include '2023:day6'
 include '2023:day7'
+include '2023:day8'
 
 include 'code-coverage-report'
